fix dark mode input border hover colour

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -107,7 +107,8 @@ input, select {
     border-radius: 4px;
     border-color: white;
     border-width: 2px;
-    @apply border-gray-300 dark:border-white p-[4px];
+    /*TODO: find where light mode hover:border-color is changed and move to here.*/
+    @apply border-gray-300 dark:border-white p-[4px] dark:hover:border-[#0070f3];
 }
 
 input {
